[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Bgen file format reader
download_url = https://github.com/limix/bgen-reader-py
keywords = bgen, reader, genetics
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = bgen-reader
url = https://github.com/limix/bgen-reader-py
version = attr: version.get

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    cffi>=1.11.5
    pytest-runner>=4.2
install_requires =
    cachetools>=3.0.0
    cffi>=1.11.5
    cytoolz>=0.9.0
    dask>=0.20.2
    pandas>=0.23.3
    pytest>=3.6.3
    scipy>=1.1.0
    texttable>=1.5.0
    tqdm>=4.23.4
    xarray>=0.11.0
tests_require =
    pytest>=3.6.3

[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
    --ignore="version.py"
    --ignore="libpath.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject .pytest_cache __pycache__ .undodir
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE
codestyle_ignore = E203
markers =
    slowtest: slow tests.

[flake8]
ignore = E501 E741 E203 W503

[rstcheck]
ignore_substitutions = today, version
ignore_directives = plot, autofunction, command-output, autmodule, automodule, autoclass, autoattribute, automethod, doctest
ignore_messages = Error in "math" directive
