[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Bgen file format reader
download_url = https://github.com/limix/bgen-reader-py
keywords = bgen, reader, genetics
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = bgen-reader
url = https://github.com/limix/bgen-reader-py
version = attr: version.get

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    cffi>=1.14.1
    pytest-runner>=5.2
install_requires =
    appdirs>=1.4.3
    cachetools>=3.1.1
    cffi>=1.14.1
    dask[bag,array,dataframe,delayed]>=2.12.0
    numpy>=1.17.4
    pandas>=0.24.0
    pytest-runner>=5.2
    pytest>=5.4.1
    requests>=1.25.8
    texttable>=1.6.2
    tqdm>=4.43.0
    xarray>=0.15.0

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="docs/conf.py"
    --ignore="version.py"
    --ignore="libpath.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject .pytest_cache __pycache__ .undodir
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE

[rstcheck]
ignore_substitutions = today, version
ignore_directives = plot, autofunction, command-output, autmodule, automodule, autoclass, autoattribute, automethod, doctest
ignore_messages = Error in "math" directive
